--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -68,6 +68,7 @@
         <p>&copy; 2025 Learning RAG. All rights reserved.</p>
     </footer>
 
+    <script src="js/config.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
